--- a/ModernInstaller/Views/MainWindow.axaml
+++ b/ModernInstaller/Views/MainWindow.axaml
@@ -36,13 +36,43 @@
                        Classes="Secondary" Content="{Binding AppName}" FontSize="16">
                 </Label>
                 <StackPanel HorizontalAlignment="Center" Spacing="5" IsVisible="{Binding !ShowDetail}">
-                    <Button Content="一键安装" Height="40" Width="150" FontSize="15" Command="{Binding InstallCommand}"></Button>
+                    <Button Height="40" Width="150" FontSize="15" Command="{Binding InstallCommand}"
+                            Classes.Update="{Binding IsUpdate}">
+                        <Button.Styles>
+                            <Style Selector="Button">
+                                <Setter Property="Content" Value="一键安装"></Setter>
+                            </Style>
+                            <Style Selector="Button.Update">
+                                <Setter Property="Content" Value="安装更新"></Setter>
+                            </Style>
+                        </Button.Styles>
+                    </Button>
                     <TextBlock Classes="Danger"
                                HorizontalAlignment="Center"
                                IsVisible="{Binding !CanInstall}"
                                Text="{Binding CantInstallReason,Mode=OneWay}">
                     </TextBlock>
+                    <StackPanel Orientation="Horizontal" Spacing="5" VerticalAlignment="Center">
+                        <TextBlock VerticalAlignment="Top"
+                                   Text="{Binding HadInstalledVersion}" />
+                        <StackPanel Orientation="Horizontal" Spacing="5"
+                                    IsVisible="{Binding IsUpdate}">
+                            <TextBlock VerticalAlignment="Top" Text=">">
+                                <TextBlock.Foreground>
+                                    <SolidColorBrush Color="{DynamicResource SemiOrange4Color}" />
+                                </TextBlock.Foreground>
+                            </TextBlock>
+                            <TextBlock VerticalAlignment="Top" Text="{Binding InstallVersion}">
+                                <TextBlock.Foreground>
+                                    <SolidColorBrush Color="{DynamicResource SemiOrange4Color}" />
+                                </TextBlock.Foreground>
+                            </TextBlock>
+                        </StackPanel>
+
+
+                    </StackPanel>
                     <Button Classes="Primary" Theme="{DynamicResource BorderlessButton}"
+                            IsVisible="{Binding !IsUpdate}"
                             Command="{Binding ShowDetailCCommand}">
                         更多安装选项
                     </Button>
@@ -69,9 +99,11 @@
                     <CheckBox.Content>
                         <StackPanel Orientation="Horizontal">
                             <Label HorizontalContentAlignment="Center" VerticalContentAlignment="Center">我已阅读并同意</Label>
-                            <Button Classes="Primary" Theme="{DynamicResource BorderlessButton}" 
+                            <Button Classes="Primary" Theme="{DynamicResource BorderlessButton}"
                                     Padding="0" Command="{Binding ShowAgreementCommand}"
-                                    CommandParameter="{Binding $parent[Window]}">《用户协议》</Button>
+                                    CommandParameter="{Binding $parent[Window]}">
+                                《用户协议》
+                            </Button>
                         </StackPanel>
                     </CheckBox.Content>
                 </CheckBox>
@@ -79,14 +111,14 @@
         </Grid>
         <Grid IsVisible="{Binding NowInstall}" HorizontalAlignment="Center" VerticalAlignment="Center">
             <StackPanel Spacing="10">
-                <Label HorizontalAlignment="Center" 
-                       Content="安装中.."  Classes="H4"
+                <Label HorizontalAlignment="Center"
+                       Content="安装中.." Classes="H4"
                        Theme="{StaticResource TitleLabel}">
                 </Label>
                 <ProgressBar
                     Width="300"
                     Maximum="100"
-                    Minimum="0" 
+                    Minimum="0"
                     ShowProgressText="True"
                     Value="{Binding NowProgress}" />
             </StackPanel>
@@ -106,11 +138,13 @@
                        Classes="Secondary" Content="{Binding AppName}" FontSize="16">
                 </Label>
                 <StackPanel Orientation="Horizontal" Spacing="10">
-                    <Button  Content="完成安装" Height="40" Width="150" FontSize="15" Command="{Binding JustCloseCommand}"></Button>
-                    <Button Theme="{DynamicResource SolidButton}" Content="立即体验" Height="40" Width="150" FontSize="15" Command="{Binding CloseAndLaunchCommand}"></Button>
+                    <Button Content="完成安装" Height="40" Width="150" FontSize="15" Command="{Binding JustCloseCommand}"></Button>
+                    <Button Theme="{DynamicResource SolidButton}" Content="立即体验" Height="40" Width="150" FontSize="15"
+                            Command="{Binding CloseAndLaunchCommand}">
+                    </Button>
                 </StackPanel>
-                
-                
+
+
             </StackPanel>
         </Grid>
     </Panel>
